--- a/local.bib
+++ b/local.bib
@@ -13,3 +13,27 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2016ivoa.spec.0523D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@MISC{2017ivoa.spec.0509L,
+       author = {{Louys}, Mireille and {Tody}, Doug and {Dowler}, Patrick and {Durand}, Daniel and {Michel}, Laurent and {Bonnarel}, Francos and {Micol}, Alberto and {IVOA DataModel Working Group}},
+        title = "{Observation Data Model Core Components, its Implementation in the Table Access Protocol Version 1.1}",
+ howpublished = {IVOA Recommendation 09 May 2017},
+         year = 2017,
+        month = may,
+        pages = {509},
+          doi = {10.5479/ADS/bib/2017ivoa.spec.0509L},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ivoa.spec.0509L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@MISC{2015ivoa.spec.1223D,
+       author = {{Dowler}, Patrick and {Bonnarel}, Fran{\c{c}}ois and {Tody}, Doug},
+        title = "{IVOA Simple Image Access Version 2.0}",
+ howpublished = {IVOA Recommendation 23 December 2015},
+         year = 2015,
+        month = dec,
+        pages = {1223},
+          doi = {10.5479/ADS/bib/2015ivoa.spec.1223D},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ivoa.spec.1223D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
