Add couple of references in preparation for DOI creation

--- a/local.bib
+++ b/local.bib
@@ -37,3 +37,20 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2015ivoa.spec.1223D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@MISC{2017ivoa.spec.0519F,
+    author = "{Fernique}, Pierre and {Allen}, Mark and {Boch}, Thomas and {Donaldson}, Tom and {Durand}, Daniel a
+nd {Ebisawa}, Ken and {Michel}, Laurent and {Salgado}, Jesus and {Stoehr}, Felix",
+    title = "{HiPS - Hierarchical Progressive Survey Version 1.0}",
+    keywords = "Astrophysics - Instrumentation and Methods for Astrophysics",
+    howpublished = "IVOA Recommendation 19 May 2017",
+    year = "2017",
+    month = "May",
+    pages = "519",
+    doi = "10.5479/ADS/bib/2017ivoa.spec.0519F",
+    archivePrefix = "arXiv",
+    eprint = "1708.09704",
+    primaryClass = "astro-ph.IM",
+    adsurl = "https://ui.adsabs.harvard.edu/abs/2017ivoa.spec.0519F",
+    adsnote = "Provided by the SAO/NASA Astrophysics Data System"
+}
